fix index.scss. align left margin

--- a/src/scss/page/_index.scss
+++ b/src/scss/page/_index.scss
@@ -1,16 +1,16 @@
 h1 {
   font-size: 32px;
-  margin: 1em;
+  margin: 1em 0 1em 32px;
   font-weight: bold;
 }
 
 h2 {
   font-size: 24px;
-  margin: 1em;
+  margin: 1em 0 1em 32px;
   font-weight: bold;
 }
 
 p {
   font-size: 18px;
-  margin: 1em;
+  margin: 1em 0 1em 32px;
 }
